@@ -1,3 +1,6 @@
+October 04, 2012
+ - Fixed issue regarding activating explorer theme
+
 September 14, 2012
  - Fixed issue #222: FDottedBrush is never released in the tree is never shown
 
